UPDATE HOMEPAGE: More comments, small spacing fix, no more weird scrollbars.

--- a/src/Front-End/Pages/HomePage/HomePage.css
+++ b/src/Front-End/Pages/HomePage/HomePage.css
@@ -13,23 +13,17 @@
     flex-wrap: wrap;
     flex-direction: column;
 }
-
-/* Test to see div borders */
-/* .HomePage > div {
-    border-style: solid;
-    border-color: black;
-} */
-
-.center-search {
-    margin-top: 15vh;
-    display: flex;
-    height: max(25vh,300px);
-    justify-content: center;
-}
-    #UWLogo {
-        margin-top: auto;
-        width: max(20vw,350px);
+    /* The flex box in the middle 1/3 of home page, below topNav, usually just for the logo */
+    .center-search {
+        margin-top: 60px; /* topNav height is 60px */
+        display: flex;
+        height: max(25vh,300px); /*HEIGHTS pp-container: 40vh; center-search: 25vh; NavBar: 60px;*/
+        justify-content: center; 
     }
+        #UWLogo {
+            margin-top: auto;
+            width: max(20vw,350px);
+        }
 
     /* A simple header stating : "Popular Classes!" */
     #popularClassesTitle {
